@@ -861,5 +861,11 @@ Tue Mar  7 10:58:21 CET 2000
 Thu Mar  9 10:12:57 CET 2000
 
 	- Fixed another memory bug in the parser.
+
+Wed Mar 15 17:36:02 CET 2000
+
+	- Synced preproc.y with gram.y.
+	- Synced pgc.l with scan.l.
+	- Synced keyword.c.
 	- Set library version to 3.1.0.
 	- Set ecpg version to 2.7.0.
